# nunki

./: Cargo.toml  README.md  TODO  nunki.toml
samples/: file_1.py  file_1.py.tmp
samples/folder_two/: file_2_1.py
src/: config.rs  error.rs  main.rs
src/git/: data.rs  github.rs  mod.rs  provider.rs
src/project/: line_iterator.rs  mod.rs  prompt.rs  regex.rs  todo.rs
src/reader/: mod.rs  regex.rs
src/token/: mod.rs  platform.rs
src/walker/: mod.rs
