[package]
name = "nunki"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
lazy_static = "1.4.0"
walkdir = "2"
clap = "2.33"
anyhow = "1.0"
reqwest = { version = "0.11.4", features = ["json"] }
async-trait = "0.1.51"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"